--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=fitness-project-be
 # Azure MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://fitnessprojectdatabase.database.windows.net.mysql.database.azure.com:1433/fitnessprojectdatabase
+spring.datasource.url=jdbc:sqlserver://fitnessprojectdatabase.database.windows.net:1433;database=fitnessprojectdatabase;
 spring.datasource.username=fitnesscs@fitnessprojectdatabase.database.windows.net
 spring.datasource.password=CSkkufitness1
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
