--- a/pom.xml
+++ b/pom.xml
@@ -77,28 +77,28 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		
-		<!-- <dependency>
+		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-			<version>11.2.0.jre8</version>	Ensure this version is compatible with your setup
+			<version>11.2.0.jre8</version>	<!--Ensure this version is compatible with your setup -->
 		</dependency>
 		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.33</version>	Make sure this version matches your setup
-		</dependency> -->
+			<version>8.0.33</version> <!-- Make sure this version matches your setup -->
+		</dependency>
 
 		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency> -->
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency> -->
 		
 		
 	</dependencies>
