--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,14 @@
-# spring.application.name=fitness-project-be
-# # Azure MySQL Database Configuration
-# spring.datasource.url=jdbc:sqlserver://fitnessprojectdatabase.database.windows.net:1433;database=fitnessprojectdatabase;
-# spring.datasource.username=fitnesscs@fitnessprojectdatabase.database.windows.net
-# spring.datasource.password=CSkkufitness1
-# spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.application.name=fitness-project-be
+# Azure MySQL Database Configuration
+spring.datasource.url=jdbc:sqlserver://fitnessprojectdatabase.database.windows.net:1433;database=fitnessprojectdatabase;
+spring.datasource.username=fitnesscs@fitnessprojectdatabase.database.windows.net
+spring.datasource.password=CSkkufitness1
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# # Hibernate Configuration
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-
+# Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Mydb
-spring.datasource.username=user01
-spring.datasource.password=s$crete01
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
-spring.jpa.properties.hibernate.formate_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-server.port=8080
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 # Mail Configuration
 spring.mail.host=smtp.gmail.com
