--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=fitness-project-be
 # Azure MySQL Database Configuration
-spring.datasource.url=jdbc:sqlserver://fitnessprojectdatabase.database.windows.net:1433;database=fitnessprojectdatabase;
-spring.datasource.username=fitnesscs@fitnessprojectdatabase.database.windows.net
+spring.datasource.url=jdbc:sqlserver://fitnessprojectdatabase.database.windows.net:1433;databaseName=fitnessprojectdatabase;
+spring.datasource.username=fitnesscs
 spring.datasource.password=CSkkufitness1
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
