--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=fitness-project-be
 # Azure MySQL Database Configuration
-spring.datasource.url=jdbc:sqlserver://fitnessprojectdatabase.database.windows.net:1433;database=fitnessprojectdatabase;
-spring.datasource.username=fitnesscs@fitnessprojectdatabase.database.windows.net
-spring.datasource.password=CSkkufitness1
+spring.datasource.url=jdbc:sqlserver://xxxx
+spring.datasource.username=xxxx
+spring.datasource.password=xxxx
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Hibernate Configuration
