--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,25 @@
 spring.application.name=fitness-project-be
 # Azure MySQL Database Configuration
-spring.datasource.url=jdbc:sqlserver://fitnessprojectdatabase.database.windows.net:1433;database=fitnessprojectdatabase;
-spring.datasource.username=fitnesscs@fitnessprojectdatabase.database.windows.net
-spring.datasource.password=CSkkufitness1
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# spring.datasource.url=jdbc:sqlserver://fitnessprojectdatabase.database.windows.net:1433;database=fitnessprojectdatabase;
+# spring.datasource.username=fitnesscs@fitnessprojectdatabase.database.windows.net
+# spring.datasource.password=CSkkufitness1
+# spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+# # Hibernate Configuration
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 # Secret Key for JWT
 jwt.secret-key=BF7FD11ACE545745B7BA1AF98B6F156D127BC7BB544BAB6A4FD74E4FC7
 
 # For testing
-# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fitness
-# spring.datasource.username=user01
-# spring.datasource.password=s$crete01
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.jpa.show-sql: true
-# spring.jpa.properties.hibernate.formate_sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-# spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-# spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fitness
+spring.datasource.username=user01
+spring.datasource.password=s$crete01
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.formate_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=update
